<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#000000"
  android:descendantFocusability="beforeDescendants"
  android:focusableInTouchMode="true"
  android:theme="@android:style/Theme.Holo"
  tools:context="com.soba.p4clock.MainActivity">

  <ScrollView
    android:id="@+id/scrollView2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/chooseButton">

        <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:layout_weight="1"
          android:fontFamily="sans-serif-medium"
          android:text="@string/location"
          android:textSize="24sp"
        />

        <RadioButton
          android:id="@+id/chooseButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
          android:onClick="setLocation"
          android:text="@string/choose_location"
        />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:weightSum="2">

          <EditText
            android:id="@+id/latText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/latitude"
            android:inputType="numberSigned"
            android:selectAllOnFocus="true"
          />

          <EditText
            android:id="@+id/lonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/longitude"
            android:inputType="numberSigned"
            android:selectAllOnFocus="true"
          />
        </LinearLayout>

        <RadioButton
          android:id="@+id/curLocationButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:onClick="useLocation"
          android:text="@string/use_current_location"
        />
      </RadioGroup>

      <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="?android:attr/listDivider"
      />

      <CheckBox
        android:id="@+id/disableBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="disableWeather"
        android:text="@string/disable_weather_updates"
      />

      <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="?android:attr/listDivider"
      />

      <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/ic_popup_sync"
        android:elevation="1dp"
        android:onClick="updateButton"
        android:text="@string/force_update"
      />

      <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="?android:attr/listDivider"
      />

      <TextView
        android:id="@+id/infoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/add"
        android:textAlignment="center"
      />

      <TextView
        android:id="@+id/infoText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/addlInfo"
        android:textAlignment="center"
      />

      <TextView
        android:id="@+id/helpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/contact"
        android:textAlignment="center"
      />

    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
