<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/custom_clock_widget"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="top|end">

  <ImageView
    android:id="@+id/imageView2"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:adjustViewBounds="true"
    android:contentDescription="@string/filler_desc"
    android:src="@drawable/aspectratio"
  />

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_alignStart="@+id/imageView2"
    android:layout_alignEnd="@+id/imageView2"
    android:adjustViewBounds="true"
    android:contentDescription="@string/filler_desc2"
    android:src="@drawable/aspectratio"
  />

  <ImageView
    android:id="@+id/backgroundCircle"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_alignStart="@+id/imageView"
    android:layout_alignTop="@+id/imageView"
    android:layout_alignEnd="@+id/imageView"
    android:layout_alignBottom="@+id/imageView"
    android:adjustViewBounds="true"
    android:contentDescription="@string/circleDesc"
    android:scaleType="fitEnd"
    android:src="@drawable/persona_clock_cropped"
  />

  <LinearLayout
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_alignStart="@+id/imageView"
    android:layout_alignTop="@+id/imageView"
    android:layout_alignEnd="@+id/imageView"
    android:layout_alignBottom="@+id/imageView"
    android:baselineAligned="false"
    android:gravity="end"
    android:orientation="horizontal"
    android:weightSum="20">

    <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_marginEnd="5dp"
      android:layout_weight="19"
      android:gravity="bottom|end"
      android:orientation="vertical"
      android:weightSum="21">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="10">

        <FrameLayout
          android:id="@+id/frameLayout"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_marginTop="5dp"
          android:layout_weight="7"
          android:background="@drawable/layout_bg">

          <ImageView
            android:id="@+id/dayDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/dayDateDesc"
          />
        </FrameLayout>
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
          android:id="@+id/timeOfDay"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="8"
          android:contentDescription="@string/timeDesc"
          android:paddingTop="2dp"
          android:paddingBottom="2dp"
          android:src="@drawable/night"
        />
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
          android:id="@+id/weatherIcon"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_gravity="end"
          android:layout_weight="9"
          android:contentDescription="@string/weatherDesc"
          android:scaleType="fitEnd"
          android:src="@drawable/unknown"
        />
      </LinearLayout>

    </LinearLayout>
  </LinearLayout>
</RelativeLayout>